force-app/main/default/objects/Platform_Event_Log_Field__c/Platform_Event_Log_Field__c.object-meta.xml
<CustomObject>
    <description>Individual field values for a platform event log for easier readability and reporting</description>
    <label>Platform Event Log Field</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Platform Event Log Field Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Event Log Fields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>