force-app/main/default/objects/Platform_Event_Log_Field__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Name of the field being captured</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the field being captured</inlineHelpText>
    <label>Field Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>