force-app/main/default/objects/Platform_Event_Log_Field__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <description>Value of the Platform Event Field</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Value of the Platform Event Field</inlineHelpText>
    <label>Field Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>