force-app/main/default/objects/Platform_Event_Log_Field__c/fields/Platform_Event_Log__c.field-meta.xml
<CustomField>
    <fullName>Platform_Event_Log__c</fullName>
    <label>Platform Event Log</label>
    <referenceTo>Platform_Event_Log__c</referenceTo>
    <relationshipLabel>Platform Event Log Fields</relationshipLabel>
    <relationshipName>Platform_Event_Log_Fields</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>